fix(security): comprehensive OWASP hardening — 28 fixes across platform
WordPress Theme (6 fixes):
- Fix 404 newsletter nonce mismatch (was always failing)
- Fix pre-order gateway signin form (nonce name + action + form target)
- Add explicit return after all wp_send_json_error() calls
- Add rate limiting to signin handler (5 attempts/15 min via transients)
- Remove JSON_UNESCAPED_SLASHES from JSON-LD (XSS prevention)
- Support "Remember Me" checkbox instead of forced persistent cookie

Secrets & Config (5 fixes):
- Remove real Gemini API key from 5 committed docs
- Replace hardcoded passwords in docker-compose.yml with env vars
- Remove hardcoded DB URL from alembic.ini
- Remove insecure fallback defaults from src/config/index.ts
- Remove .env.production, .env.staging, .env.skyyrose-experiences from git

Dependencies (12 fixes):
- bentoml >=1.4.8 → >=1.4.34 (CVE-2025-27520, CVE-2025-32375 RCE)
- transformers >=4.30.0 → >=4.53.0 (8 CVEs, 3 critical RCE)
- Pillow >=9.5.0 → >=11.0.0 (CVE-2023-44271, CVE-2024-28219)
- torch >=2.0.0 → >=2.6.0 (CVE-2025-32434 weights_only bypass)
- Remove abandoned aioredis==2.0.1 (use redis.asyncio)
- Remove abandoned docker-compose==1.29.2
- chromadb 0.5.23 → >=0.6.0 (auth bypass fixes)
- cryptography 46.0.3 → 46.0.5 in pyproject.toml mcp extras
- pillow 11.0.0 → >=12.1.1 in pyproject.toml mcp extras
- gym → gymnasium>=1.0.0 (gym is deprecated)
- Replace python-jose refs with pyjwt (CVE-2024-23342)
- Pin @automattic/mcp-wordpress-remote (was "latest")

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ coverage/
 .env.critical-fuchsia-ape
 .env.skyyrose-experiences
 .env.staging
+.env.production
 !.env.example
 secrets/
 credentials/
