--- a/alembic.ini
+++ b/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql+asyncpg://devskyy:password@localhost:5432/devskyy
+sqlalchemy.url =
 
 [post_write_hooks]
 
