--- a/fastmcp.config.json
+++ b/fastmcp.config.json
@@ -22,7 +22,7 @@
       "fastmcp>=0.4.0",
       "httpx>=0.27.0",
       "pydantic>=2.0.0",
-      "python-jose[cryptography]>=3.3.0"
+      "pyjwt[cryptography]>=2.8.0"
     ]
   },
   "endpoints": {
