--- a/mcp_servers/requirements.txt
+++ b/mcp_servers/requirements.txt
@@ -53,7 +53,6 @@ aiosqlite==0.22.1
 
 # Caching
 redis==7.1.0
-aioredis==2.0.1
 
 # Configuration management
 pyyaml==6.0.2
@@ -76,7 +75,7 @@ langchain-openai==1.1.7
 langchain-anthropic==1.3.0
 
 # Vector database (optional)
-chromadb==0.5.23
+chromadb>=0.6.0
 faiss-cpu==1.13.1
 
 # Web scraping (for context retrieval)
