--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,12 +175,11 @@ mcp = [
     "tenacity==9.1.2",
     "backoff==2.2.1",
     "ratelimit==2.2.1",
-    "cryptography==46.0.3",
+    "cryptography==46.0.5",
     "pyjwt==2.10.1",
     "sqlalchemy==2.0.45",
     "aiosqlite==0.22.1",
     "redis==7.1.0",
-    "aioredis==2.0.1",
     "pyyaml==6.0.2",
     "toml==0.10.2",
     "typing-extensions==4.15.0",
@@ -198,7 +197,7 @@ mcp = [
     "pypdf>=6.6.2",
     "python-docx>=1.1.2",
     "python-pptx>=1.0.2",
-    "pillow==11.0.0",
+    "pillow>=12.1.1",
     "soundfile==0.12.1",
     "rich==13.9.4",
     "click==8.1.7",
